--- a/bhp066/setup.cfg
+++ b/bhp066/setup.cfg
@@ -2,4 +2,4 @@
 ignore = E226,E302,E41,F401
 max-line-length = 120
 max-complexity = 10
-exclude = apps/tests/*,doc/*
+exclude = bhp066/apps/tests/*,doc/*
