--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,15 @@
-edc-quota
-edc-consent
-edc-base
-edc-constants
-edc-audit
-edc-device
-edc-admin-exclude
-django-revision
+git+https://github.com/erikvw/django-crypto-fields@master#egg=django_crypto_fields
+git+https://github.com/erikvw/django-revision@0.1.8#egg=django_revision
+git+https://github.com/botswana-harvard/edc.git@1.13.21#egg=edc
+git+https://github.com/botswana-harvard/edc-audit@0.1.0#egg=edc_audit
+git+https://github.com/botswana-harvard/edc-admin-exclude.git@0.1.3#egg=edc_admin_exclude
+git+https://github.com/botswana-harvard/edc-base@0.1.8#egg=edc_base
+git+https://github.com/botswana-harvard/edc-consent@0.1.13#egg=edc_consent
+git+https://github.com/botswana-harvard/edc-constants@0.1.6#egg=edc_constants
+git+https://github.com/botswana-harvard/edc-device.git@0.1.3#egg=edc_device
+git+https://github.com/botswana-harvard/edc-quota@1.0.11#egg=edc_quota
+git+https://github.com/botswana-harvard/getresults-identifier@0.1.0#egg=getresults_identifier
+git+https://github.com/botswana-harvard/lis@1.7.3#egg=lis
 pytz
 Django==1.6.7
 Fabric==1.9.0
