--- a/requirements.txt
+++ b/requirements.txt
@@ -29,6 +29,7 @@ django-storages==1.1.8
 django-tastypie==0.11.1
 factory-boy==2.4.1
 geo-utils==0.1
+celery
 geopy==0.99
 gitdb==0.5.4
 gitflow==0.5.1
