--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 git+https://github.com/erikvw/django-crypto-fields@master#egg=django_crypto_fields
 git+https://github.com/erikvw/django-revision@0.1.8#egg=django_revision
-git+https://github.com/botswana-harvard/edc.git@1.13.21#egg=edc
+git+https://github.com/botswana-harvard/edc.git@old_edc#egg=edc
 git+https://github.com/botswana-harvard/edc-audit@0.1.0#egg=edc_audit
 git+https://github.com/botswana-harvard/edc-admin-exclude.git@0.1.3#egg=edc_admin_exclude
 git+https://github.com/botswana-harvard/edc-base@0.1.8#egg=edc_base
