--- a/bhp066/config/etc/default.cnf
+++ b/bhp066/config/etc/default.cnf
@@ -4,4 +4,4 @@ database = bhp066
 user = root
 password = cc3721b
 default-character-set = utf8
-init_command = 'SET storage_engine=INNODB'
+#init_command = 'SET storage_engine=INNODB'
