--- a/bhp066/config/etc/default.cnf
+++ b/bhp066/config/etc/default.cnf
@@ -1,7 +1,7 @@
 # my.cnf
 [client]
-database = bhp066
+database = bhp066_test
 user = root
 password = cc3721b
 default-character-set = utf8
-init_command = 'SET storage_engine=INNODB'
+
